--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
-    <script>
+    <script src="keys.js">
     </script>
 </head>
 <body>
