--- a/www/index.html
+++ b/www/index.html
@@ -10,139 +10,109 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="keys.js"></script>
   <script>
+    // NCMB アクセスの準備
     let ncmb = new NCMB(appKey, clientKey);
-    let UTdata = ncmb.DataStore("UpdateTest");
-    let key = "score";
-
-    function enterData() {
-      let uTdata = new UTdata();
-      let value = parseInt($("#data").val());
-      uTdata.set(key, value)
-        .save()
-        .then(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-success");
-          $("#display").html("enter success");
-        })
-        .catch(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("enter fail");
-        })
-    }
+    // 本アプリで使うクラスの指定。const は定数の宣言。変更できない変数と思えば良い。
+    const db = "m";
 
     function fetchAll() {
-      UTdata.fetchAll()
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass.order("name", false).fetchAll()
         .then(function(results) {
-          let msg = "";
-          for (let i = 0; i < results.length; i++) {
-            msg += results[i].get(key) + "<br>";
-          }
-          $("#display").removeClass();
-          $("#display").addClass("text-light");
-          $("#display").addClass("bg-primary");
-          $("#display").html(msg);
-        })
-        .catch(function(error) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("delete fail:" + JSON.stringify(error));
+          showResults(results);
         })
     }
 
-    function sortData() {
-      UTdata.order(key, true).fetchAll()
+    function searchName() {
+      let name = $("#name").val();
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass
+        .equalTo("name", name)
+        .fetchAll()
         .then(function(results) {
-          let msg = "";
-          for (let i = 0; i < results.length; i++) {
-            msg += results[i].get(key) + "<br>";
-          }
-          $("#display").removeClass();
-          $("#display").addClass("text-light");
-          $("#display").addClass("bg-primary");
-          $("#display").html(msg);
-        })
-        .catch(function(error) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("delete fail:" + JSON.stringify(error));
+          showResults(results);
         })
     }
 
-    function countData() {
-      UTdata.count().fetchAll()
+    function searchLevel() {
+      let level = parseInt($("#level").val());
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass
+        .equalTo("level", level)
+        .fetchAll()
         .then(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-success");
-          $("#display").html(results.count);
-        })
-        .catch(function(error) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("count fail:" + JSON.stringify(error));
+          showResults(results);
         })
     }
 
 
-    function deleteData() {
-      UTdata.fetch()
+    function showResults(results) {
+      // テーブルのヘッダを生成
+      let msg = "<table><tr><th>name</th><th>Lvl</th><th>attack</th><th>defence</th></tr>";
+      for (let i = 0; i < results.length; i++) {
+        // 各データを収めた表の列を生成
+        msg += "<tr>";
+        msg += "<td>" + results[i].name + "</td>";
+        msg += "<td class='num'>" + results[i].level + "</td>";
+        msg += "<td class='num'>" + results[i].attack + "</td>";
+        msg += "<td class='num'>" + results[i].defence + "</td>";
+        msg += "</tr>";
+      }
+
+
+      // テーブルのテイラを生成
+      msg += "</table>";
+      $("#message").html(msg);
+    }
+
+    function searchLevelLT() {
+      let level = parseInt($("#level").val());
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass
+        .lessThan("level", level)
+        .fetchAll()
         .then(function(results) {
-          return results.delete();
-        })
-        .then(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-success");
-          $("#display").html("delete success");
-        })
-        .catch(function(error) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("delete fail:" + JSON.stringify(error));
+          showResults(results);
         })
     }
 
-    function updateData() {
-      UTdata.fetch()
+    function searchLevelGT() {
+      let level = parseInt($("#level").val(), 10);
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass
+        .greaterThan("level", level)
+        .fetchAll()
         .then(function(results) {
-          let value = parseInt($("#update").val());
-          results.set(key, value);
-          return results.update();
-        })
-        .then(function(results) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-success");
-          $("#display").html("update success");
-        })
-        .catch(function(error) {
-          $("#display").removeClass();
-          $("#display").addClass("bg-warning");
-          $("#display").html("update fail:" + JSON.stringify(error));
+          showResults(results);
         })
     }
-
-
   </script>
 </head>
 
 <body>
-  <h1 class="text-light bg-secondary">mbaas update</h1>
+  <h1>mBaaS search</h1>
   <div>
-    <input type="text" id="data" placeholder="スコア">
-    <a onclick="enterData()" class="btn btn-outline-secondary" role="button">Enter</a>
-  </div>
-  <div>
-    <a onclick="fetchAll()" class="btn btn-outline-secondary" role="buton">Fetch All</a>
-    <a onclick="sortData()" class="btn btn-outline-secondary" role="button">Sort</a>
-    <a onclick="countData()" class="btn btn-outline-secondary" role="button">Count</a>
-    <a onclick="deleteData()" class="btn btn-outline-secondary" role="buton">Delete</a>
+    <label for="name">name:</label>
+    <input id="name" type="text" placeholder="monster name">
   </div>
   <div>
-    <input type="text" id="update" placeholder="更新">
-    <a onclick="updateData()" class="btn btn-outline-secondary" role="button">Update</a>
+    <label for="level">level:</label>
+    <input id="level" type="number" placeholder="monster level">
   </div>
-  <div id="display" class="text-light bg-info">
-    Results
+  <div id="button">
+    <button class="btn" onclick="fetchAll()">Fetch All</button>
+    <button class="btn" onclick="searchName()">Name</button>
+    <br>
+    <button class="btn" onclick="searchLevelLT()">Level &lt</button>
+    <button class="btn" onclick="searchLevel()">Level</button>
+    <button class="btn" onclick="searchLevelGT()">Level &gt;</button>
+    <br>
+    <button class="btn" onclick="update()">update</button>
+
+
+
   </div>
+  <div id="message">message area</div>
 </body>
 
 </html>
