--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,25 @@
           showResults(results);
         })
     }
+    function update() {
+UTdata.fetch()
+.then(function(results){
+let value = parseInt($("#update").val());
+results.set(key, value);
+return results.update();
+})
+.then(function(results){
+$("#display").removeClass();
+$("#display").addClass("bg-success");
+$("#display").html("update success");
+})
+.catch(function(error){
+$("#display").removeClass();
+$("#display").addClass("bg-warning");
+$("#display").html("update fail:" + JSON.stringify(error));
+})
+}
+
   </script>
 </head>
 
