--- a/www/index.html
+++ b/www/index.html
@@ -86,25 +86,25 @@
           showResults(results);
         })
     }
-    function updatename() {
-UTdata.fetch()
-.then(function(results){
-let value = parseInt($("#update").val());
-results.set(key, value);
-return results.update();
-})
-.then(function(results){
-$("#display").removeClass();
-$("#display").addClass("bg-success");
-$("#display").html("update success");
-})
-.catch(function(error){
-$("#display").removeClass();
-$("#display").addClass("bg-warning");
-$("#display").html("update fail:" + JSON.stringify(error));
-})
-}
 
+    function updatename() {
+      UTdata.fetch()
+        .then(function(results) {
+          let value = parseInt($("#update").val());
+          results.set(key, value);
+          return results.update();
+        })
+        .then(function(results) {
+          $("#display").removeClass();
+          $("#display").addClass("bg-success");
+          $("#display").html("update success");
+        })
+        .catch(function(error) {
+          $("#display").removeClass();
+          $("#display").addClass("bg-warning");
+          $("#display").html("update fail:" + JSON.stringify(error));
+        })
+    }
   </script>
 </head>
 
@@ -127,6 +127,7 @@ $("#display").html("update fail:" + JSON.stringify(error));
     <button class="btn" onclick="searchLevelGT()">Level &gt;</button>
     <br>
     <button class="btn" onclick="updatename()">updatename</button>
+    <button class="btn" onclick="updateLevel()">updateLevel</button>
 
 
 
