updateLevelの処理を追加。

--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@
         })
     }
 
-    function updatename() {
+    function updateLevel() {
       UTdata.fetch()
         .then(function(results) {
           let value = parseInt($("#update").val());
