updateのボタンにbtn2を適用して、文字の色とボタンの背景とボタンの横の長さを変更した。

--- a/www/index.html
+++ b/www/index.html
@@ -126,8 +126,8 @@
     <button class="btn" onclick="searchLevel()">Level</button>
     <button class="btn" onclick="searchLevelGT()">Level &gt;</button>
     <br>
-    <button class="btn" onclick="updatename()">updatename</button>
-    <button class="btn" onclick="updateLevel()">updateLevel</button>
+    <button class="btn2" onclick="updatename()">updatename</button>
+    <button class="btn2" onclick="updateLevel()">updateLevel</button>
 
 
 
